2006-10-03  Andrew Skiba  <andrews@mainsoft.com>

	* ListDictionary.cs: remove unnecessary out parameter

2006-10-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* CollectionsUtil.cs: Set eol-style to CRLF.
	* StringDictionary.cs: Fixed line endings. Set eol-style to CRLF.
	* StringEnumerator.cs: Set eol-style to CRLF.
	* OrderDictionary.cs: Set eol-style to CRLF.

2006-09-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* OrderedDictionary.cs: IsReadOnly, indexers, Keys and Values should
	not be virtual.

2006-04-04  Atsushi Enomoto  <atsushi@ximian.com>

	* BitVector32.cs : oops those operators are for BitVector32.Section,
	  not BitVector32 itself.

2006-04-04  Atsushi Enomoto  <atsushi@ximian.com>

	* BitVector32.cs : added operator== and != in 2.0.

2006-03-11  Miguel de Icaza  <miguel@novell.com>

	* IOrderedDictionary.cs: Flag GetEnumerator as a "new" method to
	avoid warning.

2005-11-30  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* OrderedDictionary.cs: OnDeserialization is protected virtual (not 
	private).

2005-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* BitVector32.cs: Fixed 2.0 API changes and this[int] setter under 2.0
	* HybridDictionary.cs: Fixed Contains different behaviour under 2.0.
	* IOrderedDictionary.cs: Added missing GetEnumarator to the interface.
	* NameObjectCollectionBase.cs: Fixed 2.0 API changes and 
	serialization.
	* NameValueCollection.cs: Fixed 2.0 API changes.
	* OrderedDictionary.cs: Fixed API changes, serialization and this[int]
	setter.
	* StringDictionary.cs: Added missing null checks.

2005-10-26  Raja R Harinath  <rharinath@novell.com>

	* HybridDictionary.cs (is_list): Remove.
	(inner): Remove 'set' accessor.
	(HybridDictionary, Switch): Initialize 'list' and 'hashtable' directly.

2005-10-26  Svetlana Zholkovsky  <svetlanaz@mainsoft.com>

	* NameObjectCollectionBase.cs
      ListDictionary.cs
      HybridDictionary.cs
      Fix serialization compatibility with .NET
